@@ -1,13 +1,20 @@
+2008-03-18  Morten Kjeldgaard  <mok@homunculus.local>
+
+	* src/*: add doxygen markup.
+	* src/util.c: change /usr/lib to /usr/share/mox
+	* src/util.h: several function declarations missing.
+	* configure.ac: version bumped to 2.0.2
+	
 2007-10-26  Morten Kjeldgaard  <mok@homunculus.local>
 
 	* Various syntactic fixes to the code. Eliminate error messages
-	  under Ubuntu 7.10.
+	  from Ubuntu 7.10 version.
 
 2007-04-26  Morten Kjeldgaard  <mok@ghost.bioxray.dk>
 
 	* Fixed bug where the x coordinate would read wrong if the value
 	went into field 30. Reading of ATOM records now faster and less
-	error prone. Can handle situat ion with no spaces between numbers.
+	error prone. Can handle situation with no spaces between numbers.
 	I no longer convert '*' to primes in the atom names of riboses in
 	nucleic acids. Release as version 1.3.1
 	* Changes in pucker to reflect the above.
